Tue Nov 06 23:56:12 2001  George Lebl <jirka@5z.com>

	* gnome-macros.h: chain the class_init func so that we get
	  the parent_class pointer in the class_init function rather then
	  in the get_type function to reduce get_type overhead.

2001-11-02  Michael Meeks  <michael@ximian.com>

	* gnome-init.c (bonobo_activation_pre_args_parse),
	(bonobo_activation_post_args_parse): don't double init & leak.

Wed Oct 31 18:20:44 2001  Jonathan Blandford  <jrb@redhat.com>>

	* gnome-help.c (gnome_help_display): Simple variant of showing
	help function.  The one that 90% of users will use.
	(gnome_help_display_with_doc_id): Full variant.
	(gnome_help_display_desktop): Fix up a bit.

	* gnome-i18n.c: doc updates.

2001-10-30  jacob berkman  <jacob@ximian.com>

	* libgnome-2.0.pc.in (Cflags): 
	* Makefile.am (libgnomeincludedir): install headers in
	libgnome-2.0 rather than gnome-2.0

2001-10-29  jacob berkman  <jacob@ximian.com>

	* gnome-init.c: use GETTEXT_PACKAGE where appropriate

	* gnome-i18nP.h (GNOME_EXPLICIT_TRANSLATION_DOMAIN): use
	GETTEXT_PACKAGE

2001-10-26  Michael Meeks  <michael@ximian.com>

	* libgnome.schema: add menus-have-icons, so we get some icons.

2001-10-24  Anders Carlsson  <andersca@gnu.org>

	* gnome-preferences.[ch]: Remove these files as they aren't used
	anymore.

Tue Oct 23 14:40:12 2001  George Lebl <jirka@5z.com>

	* gnome-program.h: add padding to the class structure to
	  allow for future expansions

	* gnome-util.c: make gnome_setenv handle null value

2001-10-23  jacob berkman  <jacob@ximian.com>

	* gnome-program.c (gnome_program_initv): register the
	libgnome_module if it wasn't passed in.  this isn't the gross hack
	it was when gtk didn't have gdk_threads_init().

2001-10-19  jacob berkman  <jacob@ximian.com>

	* gnome-preferences.c (do_warning): don't be so damn annoying

2001-10-18 Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: simplify gconf install

	* gnome-url.c (gnome_url_show): unref gconf client.
